--- a/css/schede_touch.css
+++ b/css/schede_touch.css
@@ -147,6 +147,7 @@
 }
 .smart #elenchi .listaPazienti,
 .smart #elenchi .listaFornitori,
+.smart #elenchi .listaAnnotazioni,
 .smart #elenchi .listaServizi{
 	height: calc(100% - 39px);
 }
