--- a/css/forms.css
+++ b/css/forms.css
@@ -170,8 +170,8 @@ body:not(.bodyStyled2):not(.smart) #scheda.schForm .annullaBtn:not(#annullaOrari
 .smart #scheda.schForm .submitBtn{
 	width: calc(50% - 20px);
 }
-#cont_sceltaAppuntamento .annullaBtn,
-#cont_sceltaAppuntamento .submitBtn{
+.smart #cont_sceltaAppuntamento .annullaBtn,
+.smart #cont_sceltaAppuntamento .submitBtn{
 	width: auto !important;
 	vertical-align:middle;
 }
