--- a/css/schede_touch.css
+++ b/css/schede_touch.css
@@ -176,9 +176,9 @@
 .smart #elenchi.compresso #elenchi_cont{
 	display: none !important;
 }
-.smart #scheda.compresso{
+/* .smart #scheda.compresso{
 	bottom:108px !important;
-}
+} */
 
 .smart #elenchi_pulsanti .elencoSel,
 .smart #elenchi_lista div:not(.listaMeridiani) > div.elencoSel:not(.procNotCond):not(.procCond):not(.procPref){
@@ -217,7 +217,7 @@
 	width:100% !important;
 	bottom:0px;
 }
-.smart #scheda.visSch{
+/* .smart #scheda.visSch{
 	width:100% !important;
 	height:100% !important;
 	bottom:0px !important;
@@ -293,7 +293,7 @@
 	width:100%;
 	color:#FFF;
 	border-radius: 6px 6px 0px 0px;
-}
+} */
 .smart #ss{
 	height: 29px !important;
 }
@@ -310,6 +310,7 @@
 .smart .visSch #ss,
 .smart .visSch #sc{
 	display:inline-block !important;
+	background-color:var(--colore-grigio-scuro);
 }
 .smart #scheda_testo > div,
 .smart #scheda_testo2 > div {
