--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -1136,6 +1136,7 @@ body.smart #elenchi #cambioSistemaMeridiani{
 
 #titPoint h1{
 	margin-bottom:0px;
+	margin-left: 10px;
 }
 .protNMK .pallinoPat{
     border-bottom: 1px solid rgb(5,0,200,0.3);
